--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 :root{
   color: white;
   text-decoration: none;
+  --background: radial-gradient(circle, rgba(247,242,244,1) 0%, rgba(38,65,94,1) 0%);
 }
 
 html {
@@ -49,11 +50,16 @@ html {
 }
 
 body {
-  
-background: radial-gradient(circle, rgba(247,242,244,1) 0%, rgba(38,65,94,1) 0%);
- 
+  background: var(--background);
   font-family: 'Barlow', sans-serif;
 }
+
+.darkMode{
+  position: absolute;
+  right: 20px;
+  margin-top: 30px;
+}
+
 
 .footer {
   font-weight: 700;
