fetch repository github

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -157,3 +157,12 @@ body {
   column-gap: 16px;
   }
 }
+
+.repository{
+  &__link{
+    text-decoration: none;
+    color: yellow;
+  }
+  color: #fff;
+  text-decoration: none;
+}
